--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,8 @@ captures/
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
+.idea/codeStyles/Project.xml
+.idea/codeStyles/codeStyleConfig.xml
 .idea/assetWizardSettings.xml
 .idea/dictionaries
 .idea/libraries
